syntax = "proto3";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}
  rpc GreetManyTimes (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
  string greeting_type = 2;
}

message HelloResponse {
  string message = 1;
  int32 timestamp = 2;
  bool success = 3;
}
